--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 id="animated-title">Link Vault</h1>
       <div class="search-container">
         <input id="search-bar" type="text" placeholder="Search links...">
-        <button id="search-btn">
+        <button class="search" id="search-btn">
           <i class="fas fa-search"></i>
         </button>
       </div>
